13-k83-configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-file # ПОДКЛЮЧЕНИЕ ConfigMap
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: html-file
        configMap:
          name: web-content-01
