13-k83-configs/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-configs-ingress
  namespace: web
spec:
  rules:
  - host: laymbood.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  tls:
    - hosts:
      - laymbood.ru
      secretName: hw-configs-https
